@@ -28,6 +28,8 @@ PHP                                                                        NEWS
 
 - ODBC:
   . Fixed memory leak with failed SQLPrepare. (NattyNarwhal)
+  . Fixed persistent procedural ODBC connections not getting closed.
+    (NattyNarwhal)
 
 - SPL:
   . Fixed bug GH-11972 (RecursiveCallbackFilterIterator regression in 8.1.18).
